fix: bug of select component stuck

--- a/packages/drip-table-generator/src/components/CustomForm/components/style-numbers/index.less
+++ b/packages/drip-table-generator/src/components/CustomForm/components/style-numbers/index.less
@@ -42,11 +42,3 @@
     }
   }
 }
-
-:global(.ant-select-selector) {
-  padding: 0 2px;
-}
-
-:global(.ant-select-item) {
-  padding: 4px 2px;
-}
